Add backend to render.yaml, update gitignore

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,32 @@
 services:
+  # Backend API
+  - type: web
+    name: jerry-api
+    env: node
+    rootDir: server
+    buildCommand: npm install
+    startCommand: node index.js
+    envVars:
+      - key: MONGO_URI
+        sync: false
+      - key: EMAIL_USER
+        sync: false
+      - key: EMAIL_PASS
+        sync: false
+      - key: EMAIL_FROM
+        sync: false
+      - key: NODE_ENV
+        value: production
+
+  # Frontend Static Site
   - type: web
     name: jerry-services
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    envVars:
+      - key: VITE_API_URL
+        sync: false
     routes:
       - type: rewrite
         source: /*
